# voxkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: capability-artifact-model.md  eval-baseline-observations.md  eval-methodology.md  eval.md  transcribe-segmentation-improvements.md  transcribe.md  认真做字幕的YouTuber.md
docs/archive/: transcribe-segmentation-improvements.md
src/voxkit/: __init__.py  cli.py
src/voxkit/commands/: __init__.py  align.py  build_bundle.py  diarize.py  doctor.py  eval.py  fetch_bundle.py  needs_review.py  proofread.py  quality.py  reseg.py  review.py  setup.py  transcribe.py  translate.py
src/voxkit/core/: __init__.py  align_speakers.py  asr_merge.py  asr_provider.py  audio.py  bundle.py  constants.py  device.py  diarize_runner.py  env.py  eval_metrics.py  hallucination_filter.py  lazy_install.py  lifecycle.py  llm_eval.py  llm_provider.py  pipeline.py  pricing.py  proofread_pipeline.py  proofread_risk.py  quality_metrics.py  segmenter.py  semantic_resegment.py  subtitle_metrics.py  transcribe_pipeline.py  translate_pipeline.py  types.py  whisper_exec.py  word_classes.py  workspace.py
src/voxkit/data/: glossary.example.json  hallucination_blocklist.json
src/voxkit/io/: cues_json.py  glossary.py  progress.py  remixr_adapter.py  schema.py  srt.py
src/voxkit/llm/: __init__.py  client.py  errors.py  providers.py
src/voxsplit/: __init__.py  cli.py
src/voxsplit/commands/: __init__.py  align.py  build_bundle.py  diarize.py  doctor.py  fetch_bundle.py  setup.py
src/voxsplit/core/: __init__.py  audio.py  bundle.py  constants.py  lazy_install.py  pipeline.py
src/voxsplit/io/: __init__.py  schema.py
tests/: conftest.py  test_align.py  test_align_speakers.py  test_asr_merge.py  test_asr_provider.py  test_audio_chunk.py  test_bundle.py  test_cli.py  test_cues_json.py  test_diarize_runner.py  test_doctor.py  test_env.py  test_eval_metrics.py  test_glossary.py  test_hallucination_filter.py  test_lazy_install.py  test_lifecycle.py  test_llm_eval.py  test_llm_provider.py  test_needs_review.py  test_pricing.py  test_proofread_pipeline.py  test_proofread_risk.py  test_quality_metrics.py  test_remixr_adapter.py  test_remixr_zod.py  test_reseg_command.py  test_schema.py  test_segmenter.py  test_semantic_resegment.py  test_semantic_resegment_cjk.py  test_srt.py  test_subtitle_metrics.py  test_synthetic_audio_fixtures.py  test_transcribe_cli.py  test_transcribe_e2e.py  test_transcribe_pipeline.py  test_transcribe_synthetic_audio.py  test_translate_pipeline.py  test_whisper_exec.py  (+1 more)
tests/fixtures/audio/: README.md  build_synthetic_audio.py
tests/fixtures/whisper/: chinese_short.json  english_short.json
tests/llm/: test_client.py  test_prompts.py  test_providers.py
(+35 files in other folders)
