[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxkit"
version = "0.4.0"
description = "Standalone speaker diarization CLI built around pyannote.audio"
requires-python = ">=3.10"
authors = [{ name = "xsharp" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "pysbd>=0.3.4",
    # 主 CLI 仅依赖轻量库；pyannote/torch 走 [worker] extra，由 lazy_install 装到独立 venv
    # pysbd 是纯 Python 规则化句子分割器（~1MB），仅在 --resegment semantic 时调用，
    # 默认 import 路径不触发，零开销。
]

[project.optional-dependencies]
worker = [
    "pyannote.audio>=4.0.4,<5",
    "torch>=2.2",
    "torchaudio>=2.2",
]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
voxkit = "voxkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voxkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
